kubernetes-manifests/dev/service-type.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: go-hello-demo-external
spec:
  type: LoadBalancer
