kubernetes-manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hello-address
    networking.gke.io/managed-certificates: managed-cert-17
spec:
  rules:
  - host: hello-dev.shawnk8s.com
    http:
      paths:    
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: go-hello-demo-external
              port: 
                number: 80
